--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,6 +25,11 @@
 
         <activity android:name=".FakeTicketActivity"
             android:label="@string/book_ticket" />
+
+        <activity android:name=".BookActivity"
+            android:label="@string/submit" />
+
+        <activity android:name=".BookResultActivity" />
     </application>
 
 </manifest>
